--- a/requirements.txt
+++ b/requirements.txt
@@ -144,7 +144,7 @@ networkx==3.2.1
 nltk==3.8.1
 numba==0.57.1
 numpy==1.24.4
-nvidia-cublas-cu12==12.1.3.1
+nvidia-cublas-cu12~=12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu12==12.1.105
